Improve pyproject.toml, add flake8 config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ description = "Restaurant menu bot"
 authors = [
     { name = "Hufnagel Istvan", email = "pista@fnagel.hu" }
 ]
+readme = {file = "README.md", content-type = "text/markdown"}
 license = { file = "LICENSE" }
+requires-python = ">=3.10"
 dependencies = [
     "google-genai~=1.8",
     "pillow~=11.1",
@@ -18,3 +20,20 @@ dependencies = [
     "pydantic~=2.11",
     "python-dotenv~=1.1"
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest~=8.3",
+    "flake8~=7.2",
+    "flake8-pyproject~=1.2"
+]
+
+[tool.setuptools.dynamic]
+readme = {file = "README.md", content-type = "text/markdown"}
+
+[tool.flake8]
+max-line-length = 120
+import-order-style = "edited"
+min_python_version = "3.10.0"
+extend-ignore = ["W503"]
+exclude = [".git", "__pycache__", "build", "dist"]
