--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "restabot"
-version = "0.1.0"
+version = "1.0.0"
 description = "Restaurant menu bot"
 authors = [
     { name = "Hufnagel Istvan", email = "pista@fnagel.hu" }
@@ -18,7 +18,8 @@ dependencies = [
     "playwright~=1.51",
     "PyYAML~=6.0",
     "pydantic~=2.11",
-    "python-dotenv~=1.1"
+    "python-dotenv~=1.1",
+    "slack-sdk~=3.35"
 ]
 
 [project.optional-dependencies]
