--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ license = { file = "LICENSE" }
 requires-python = ">=3.10"
 dependencies = [
     "aiohttp~=3.11",
-    "google-genai~=1.9",
+    "google-genai~=1.10",
     "pillow~=11.1",
     "playwright~=1.51",
     "PyYAML~=6.0",
@@ -26,6 +26,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest~=8.3",
+    "pytest-asyncio~=0.26",
     "flake8~=7.2",
     "flake8-pyproject~=1.2"
 ]
@@ -39,3 +40,6 @@ import-order-style = "edited"
 min_python_version = "3.10.0"
 extend-ignore = ["W503"]
 exclude = [".git", "__pycache__", "build", "dist"]
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
