--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "restabot"
-version = "1.0.2"
+version = "1.0.3"
 description = "Restaurant menu bot"
 authors = [
     { name = "Hufnagel Istvan", email = "pista@fnagel.hu" }
@@ -13,22 +13,22 @@ readme = {file = "README.md", content-type = "text/markdown"}
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
 dependencies = [
-    "aiohttp~=3.12",
-    "google-genai~=1.29",
-    "pillow~=11.3",
-    "playwright~=1.54",
+    "aiohttp~=3.13",
+    "google-genai~=1.50",
+    "pillow~=12.0",
+    "playwright~=1.56",
     "PyYAML~=6.0",
-    "pydantic~=2.11",
-    "python-dotenv~=1.1",
-    "slack-sdk~=3.36"
+    "pydantic~=2.12",
+    "python-dotenv~=1.2",
+    "slack-sdk~=3.38"
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest~=8.3",
-    "pytest-asyncio~=0.26",
-    "flake8~=7.2",
-    "flake8-pyproject~=1.2"
+    "flake8~=7.3",
+    "flake8-pyproject~=1.2",
+    "pytest~=9.0",
+    "pytest-asyncio~=1.3"
 ]
 
 [tool.setuptools.dynamic]
